--- a/Perceptron.ipynb
+++ b/Perceptron.ipynb
@@ -43,14 +43,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MNIST dataset successfully loaded into numpy arrays.\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start as the Python Environment 'ml (Python -1.-1.-1)' is no longer available. Consider selecting another kernel or refreshing the list of Python Environments."
      ]
     }
    ],
@@ -969,7 +970,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "-1.-1.-1"
   }
  },
  "nbformat": 4,
